# Les-Accidents-Lore

./: README.md  TODO.md  basics.py  battle.py  bigText.py  chapters.py  colours.py  main.py  players.py  pyproject.toml  sound.py  story.md
LAL_saveSlots/: slot1.txt  slot3.txt
