[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Adib Charba <adib.charba@gmail.com>"]
description = "Les boys DO be des gamers"
name = "Les-boys-sont-des-GAMERS"
version = "0.1.0"
[tool.poetry.dependencies]
colours = "^0.3"
python = "^3.8"
playsound = "^1.3.0"
pygame = "^2.1.0"
[tool.poetry.dev-dependencies]
